# rutix

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  prod.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_energy.py  0003_add_med_reminder_time.py  0004_add_vpn_eng_hours.py  0005_add_appetite.py  0006_add_med_snooze.py  0007_add_state_entries.py
docs/plans/: 2026-05-14-phase-1-mental-tracker-core.md  2026-05-14-phase-2-extensions.md  2026-05-14-phase-3-prod-deploy.md
prompts/: classify_habits.md  close_week.md  eat.md
src/rutix/: __main__.py  daily_io.py  settings.py  time_utils.py
src/rutix/bot/: app.py  auth.py  (+1 more)
tests/: conftest.py
tests/unit/: test_alembic.py  test_auth_middleware.py  test_claude_client.py  test_daily_md.py  test_daily_plan_ping.py  test_eat_handler.py  test_evening_ping.py  test_flush_day.py  test_flush_week.py  test_github_client.py  test_med_reminder.py  test_meds_handler.py  test_models.py  test_mood_tracker_render.py  test_mood_tracker_update.py  test_note_done_handlers.py  test_notifier.py  test_nutrition_weekly_md.py  test_recurrence.py  test_report_flow.py  test_report_meds_time.py  test_report_resume.py  test_reschedule_overdue.py  test_scheduler_summary.py  test_settings.py  test_state_handler.py  test_thoughts_md.py  test_time_utils.py  test_today_handler.py  test_todoist_client.py  test_track_resume.py  test_track_skip_taken.py  test_track_stale.py  test_track_text_input.py  test_track_vpn_english.py  test_update_habits.py  test_week_handler.py  test_weekly_md.py  test_word_handler.py
(+31 files in other folders)
