[project]
name = "rutix"
version = "0.1.0"
description = "Personal Telegram bot — mental state & nutrition tracker"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rutix"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
