[project]
name = "rutix"
version = "0.1.0"
description = "Personal Telegram bot — mental state & nutrition tracker"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.25.0",
    "anthropic>=0.40.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "apscheduler>=3.11.0",
    "python-dateutil>=2.9.0",
    "python-json-logger>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "greenlet>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rutix"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
